# libalgebra-project-template

./: .gitmodules  CMakeLists.txt  README.md
la_helpers/: CMakeLists.txt  la_helper_main.cpp  la_helpers.h  libalgebra_examples_list.cpp
la_helpers/la_helpers/: la_helper_main.cpp  la_helpers.h  libalgebra_example.cpp
src/: example1.cpp
